Set UTF-8 encoding explicitly for write to output file